# FastAPI-boilerplate

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  default.conf  docker-compose.yml  mypy.ini  pyproject.toml
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  fastapi-boilerplate-feature-request.md  fastapi-boilerplate-issue.md
.github/workflows/: main.yml
dashboard/grafana/datasources/: datasource-config.yml
dashboard/grafana/provisioning/dashboards/: dashboard.yml  fastapi-observability.json
dashboard/prometheus/: prometheus.yml
src/: pyproject.toml
src/app/: gunicorn_conf.py  main.py  worker.py
src/app/api/: __init__.py  dependencies.py  exceptions.py  paginated.py
src/app/api/v1/: __init__.py  login.py  logout.py  posts.py  rate_limits.py  tasks.py  tiers.py  users.py
src/app/core/: cache.py  config.py  database.py  exceptions.py  logger.py  models.py  rate_limit.py  schemas.py  security.py  setup.py  tracking.py
src/app/core/db/: crud_token_blacklist.py  database.py  models.py  token_blacklist.py
src/app/core/exceptions/: cache_exceptions.py  http_exceptions.py
src/app/core/utils/: cache.py  queue.py  rate_limit.py
src/app/core/worker/: functions.py  settings.py
src/app/crud/: crud_base.py  crud_posts.py  crud_rate_limit.py  crud_tier.py  crud_token_blacklist.py  crud_users.py  helper.py
src/app/middleware/: client_cache_middleware.py  prometheus_middleware.py
src/app/models/: __init__.py  post.py  rate_limit.py  tier.py  token_blacklist.py  user.py
src/app/schemas/: job.py  post.py  rate_limit.py  tier.py  token_blacklist.py  user.py
src/migrations/: env.py
src/migrations/versions/: 0b33c76d0a38_.py  211a8b0d0080_.py  474ddfe32ea7_.py  ad940a8c0e9e_.py
src/scripts/: create_first_superuser.py  create_first_tier.py
src/tests/: conftest.py  helper.py  test_user.py
tests/: conftest.py  helper.py  test_user.py
tests/helpers/: generators.py  mocks.py
